# mase-phi-hpc

./: .gitignore  CLAUDE.md  CODE_REVIEW_FINDINGS.md  README.md  environment.yml  pyproject.toml
configs/: config_multi.yaml  config_single.yaml
configs/analysis/: high_depth_analysis.yaml  standard_analysis.yaml  template_multi_patient.yaml  template_multi_patient_test.yaml  test_analysis.yaml
configs/templates/: clone_frequency_example.yaml  cruk0044_dynamic.yaml  cruk0044_fixed.yaml
scripts/: install.sh  multi_patient.sh  parse_config.py  run_pipeline.sh  validate_setup.sh
src/aggregation/: aggregation.sh
src/bootstrap/: bootstrap.py  bootstrap.sh
src/longitudinal/: longitudinal_analysis_yaml.sh
src/markers/: marker_selection.sh  run_data_multi_sample.py
src/phylowgs/: phylowgs.sh
