[project]
name = "mase-phi-hpc"
description = "Phylogenetic analysis pipeline for cancer genomics with SLURM integration"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    # Core scientific computing
    "numpy",
    "pandas", 
    "scipy",
    
    # Visualization
    "matplotlib",
    "seaborn",
    
    # Tree analysis and phylogenetics  
    "ete3",
    "lxml",  # required by ete3
    
    # Graph visualization
    "graphviz",
    "python-graphviz",
    
    # Machine learning and optimization
    "scikit-learn",
    "gurobi>=11.0.0,<12.0.0",
    "gurobipy",
    
    # Configuration and utilities
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []