[project]
name = "mase-phi-hpc"
description = "Phylogenetic analysis pipeline for cancer genomics with SLURM integration"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    # Core scientific computing
    "numpy",
    "pandas", 
    "scipy",
    
    # Visualization
    "matplotlib",
    "seaborn",
    
    # Tree analysis and phylogenetics  
    "ete3",
    "lxml",  # required by ete3
    
    # Graph visualization
    "graphviz",
    # Note: python-graphviz installed separately via pip after uv sync
    
    # Machine learning and optimization
    "scikit-learn",
    # Note: gurobipy==11.0.2 installed separately via pip after uv sync
    
    # Configuration and utilities
    "pyyaml",
]

[tool.uv]
dev-dependencies = []